--- a/initNotice.html
+++ b/initNotice.html
@@ -7,39 +7,37 @@
   <div>
     <h5 style="margin-top: 0; font-weight: bold;">
       <span class="title-highlight">
-        음성인식이 축어록을 온전히 풀어주지는 못합니다.
+        음성인식이 축어록을 완벽히 풀어주지는 못합니다.🥺
       </span>
     </h5>
-    <b>
-      <p style="font-size: 0.95rem; margin: 0px;">
-        안녕하세요! 풀다팀 입니다. <br />
-        많은 분들이 베타테스트에 참여하시면서 의견을 보내주십니다.
-        <br />
-        저희 팀은 보내주신 의견들을 검토하고 개발하면서 시간을
-        보내고 있답니다.
-        <br />
-        많은 분들이 음성인식 결과가 정확하지 않아 아쉬워하십니다.
-        <br />
-        저희도 좋은 결과를 제공해드리고 싶지만 <br />
-        음성인식은 어떠한 품질로 녹음되었느냐에 따라 매우 크게
-        영향을 받습니다. <br />
-        그럼에도 불구하고 조금이라도 도움이 될수 있게 현재는 녹음
-        세팅 환경을 알려드리고 있습니다.<br />
-        내부적으로는 다양한 상담환경에서도 좋은 성능을 보일 수
-        있도록 고민 중에 있습니다.<br />
-        제공해드리는 초안이 축어록 작성에 조금이라도 도움이
-        되었으면 좋겠습니다.
-        <br /><br />
-        <span style="font-size: 1.1rem;">풀다</span>는 축어록을
-        빠르고 편리하게 작성하기 위해 만들어졌습니다.
-        <br />
-        테스터분들의 이용 후기와 의견은 언제나 환영입니다.<br />
-        <span style="font-size: 1.1rem;">풀다</span>는
-        심리상담사들의 수련 여건이 개선되면 내담자들에게 더 나은
-        서비스로 돌아온다고 믿습니다.<br /><br />
-        <span>2020.08.06 풀다팀 드림</span>
-      </p>
-    </b>
+    <p style="font-size: 0.95rem; margin: 0px;">
+      안녕하세요! 풀다팀 입니다. <br />
+      많은 분들이 베타테스트에 참여하시면서 의견을 보내주십니다.
+      <br />
+      저희 팀은 보내주신 의견들을 검토하고 개발하면서 시간을
+      보내고 있답니다.
+      <br />
+      많은 분들이 음성인식 결과가 정확하지 않아 아쉬워하십니다.
+      <br />
+      저희도 좋은 결과를 제공해드리고 싶지만 <br />
+      <span style="font-size: 1.1rem;">음성인식</span>은 어떠한 품질로 녹음되었느냐에 따라 매우 크게
+      영향을 받습니다. <br />
+      그럼에도 불구하고 조금이라도 도움이 될수 있게 현재는 녹음
+      세팅 환경을 알려드리고 있습니다.<br />
+      내부적으로는 다양한 상담환경에서도 좋은 성능을 보일 수
+      있도록 고민 중에 있습니다.<br />
+      제공해드리는 초안이 축어록 작성에 조금이라도 도움이
+      되었으면 좋겠습니다.
+      <br /><br />
+      풀다는 축어록을
+      빠르고 편리하게 작성하기 위해 만들어졌습니다.
+      <br />
+      테스터분들의 이용 후기와 의견은 언제나 환영입니다.<br />
+      풀다는
+      심리상담사들의 수련 여건이 개선되면 내담자들에게 더 나은
+      서비스로 돌아온다고 믿습니다.<br /><br />
+      <span>2020.08.06 풀다팀 드림</span>
+    </p>
   </div>
 </body>
 </html>
