--- a/initNotice.html
+++ b/initNotice.html
@@ -1,6 +1,6 @@
 <html lang="ko">
 <head>
-  <meta name="title" content="보내는 글">
+  <meta name="title" content="알려드립니다.">
   <meta name="date" content="2020-08-07">
 </head>
 <body>
