--- a/initNotice.html
+++ b/initNotice.html
@@ -10,7 +10,7 @@
       많은 분들이 베타테스트에 참여하시면서 의견을 보내주십니다.
       <br />
       저희 팀은 보내주신 의견들을 검토하고 개발하면서 시간을
-      보내고 있답니다.
+      보내고 있답니다. 👩‍💻🧑‍💻
       <br /><br />
       많은 분들이 음성인식 결과가 정확하지 않아 아쉬워하십니다.
       <br />
