--- a/initNotice.html
+++ b/initNotice.html
@@ -15,9 +15,9 @@
       많은 분들이 음성인식 결과가 정확하지 않아 아쉬워하십니다.
       <br />
       저희도 좋은 결과를 제공해드리고 싶지만 <br />
-      <span style="font-size: 1.1rem;">음성인식</span>이 축어록을 완벽히 풀어주지는 못합니다.🥺 <br />
-      <span style="font-size: 1.1rem;">음성인식</span>은 어떠한 품질로 녹음되었느냐에 따라 매우 크게
-      영향을 받습니다. <br /><br />
+      <span style="font-size: 1.1rem;">음성인식</span>은 축어록을 완벽히 풀어주지 못합니다.🥺 <br />
+      <span style="font-size: 1.1rem;">음성인식</span>은 녹음 파일의 질에 따라 매우 크게
+      영향을 받기 때문입니다.<br /><br />
       그럼에도 불구하고 조금이라도 도움이 될수 있게 현재는 녹음
       세팅 환경을 알려드리고 있습니다.<br />
       내부적으로는 다양한 상담환경에서도 좋은 성능을 보일 수
