--- a/initNotice.html
+++ b/initNotice.html
@@ -20,11 +20,14 @@
       영향을 받기 때문입니다.<br /><br />
       그럼에도 불구하고 조금이라도 도움이 될수 있게 현재는 녹음
       세팅 환경을 알려드리고 있습니다.<br />
-      내부적으로는 다양한 상담환경에서도 좋은 성능을 보일 수
-      있도록 고민 중에 있습니다.<br />
       제공해드리는 초안이 축어록 작성에 조금이라도 도움이
       되었으면 좋겠습니다.
       <br /><br />
+      내부적으로는 다양한 상담환경에서도 좋은 성능을 보일 수
+      있도록 고민 중에 있기 때문에,<br />
+      상담하시면서 어떤 경우에는 음성인식이 잘 되었고 어떤 경우에는 잘 안됬다고 의견을 주시는 것이<br />
+      저희에게는 큰 도움이 됩니다.
+      
       풀다는 축어록을
       빠르고 편리하게 작성하기 위해 만들어졌습니다.
       <br />
