--- a/initNotice.html
+++ b/initNotice.html
@@ -24,17 +24,14 @@
       되었으면 좋겠습니다.
       <br /><br />
       내부적으로는 다양한 상담환경에서도 좋은 성능을 보일 수
-      있도록 고민 중에 있기 때문에,<br />
-      상담하시면서 어떤 경우에는 음성인식이 잘 되었고 어떤 경우에는 잘 안됬다고 의견을 주시는 것이<br />
+      있도록 고민 중이기 때문에,<br />
+      어떤 환경에서 음성인식이 잘 되었고, 잘 안됬다고 의견을 주시는 것이<br />
       저희에게는 큰 도움이 됩니다.
-      
+      <br /><br />
       풀다는 축어록을
-      빠르고 편리하게 작성하기 위해 만들어졌습니다.
+      더욱 빠르고 편리하게 작성하기 위해 여러 기능들을 고려하고 있습니다.
       <br />
-      테스터분들의 이용 후기와 의견은 언제나 환영입니다.<br />
-      풀다는
-      심리상담사들의 수련 여건이 개선되면 내담자들에게 더 나은
-      서비스로 돌아온다고 믿습니다.<br /><br />
+      테스터분들의 이용후기와 의견을 기다립니다.
       <span>2020.08.06 풀다팀 드림</span>
     </p>
   </div>
