--- a/initNotice.html
+++ b/initNotice.html
@@ -18,8 +18,8 @@
       <span style="font-size: 1.1rem;">음성인식</span>은 축어록을 완벽히 풀어주지 못합니다.🥺 <br />
       <span style="font-size: 1.1rem;">음성인식</span>은 녹음 파일의 질에 따라 매우 크게
       영향을 받기 때문입니다.<br /><br />
-      그럼에도 불구하고 조금이라도 도움이 될수 있게 현재는 녹음
-      세팅 환경을 알려드리고 있습니다.<br />
+      그럼에도 불구하고 조금이라도 도움이 될수 있게 <br />
+      현재는 녹음 세팅 환경을 알려드리고 있습니다.<br />
       제공해드리는 초안이 축어록 작성에 조금이라도 도움이
       되었으면 좋겠습니다.
       <br /><br />
