--- a/initNotice.html
+++ b/initNotice.html
@@ -25,7 +25,7 @@
       <br /><br />
       내부적으로는 다양한 상담환경에서도 좋은 성능을 보일 수
       있도록 고민 중이기 때문에,<br />
-      어떤 환경에서 음성인식이 잘 되었고, 잘 안됬었다고 의견을 주시는 것이<br />
+      어떤 환경에서 음성인식이 잘 되었고, 잘 안되었다고 의견을 주시는 것이<br />
       저희에게는 큰 도움이 됩니다.
       <br /><br />
       풀다는 축어록을
