--- a/initNotice.html
+++ b/initNotice.html
@@ -28,8 +28,8 @@
       어떤 환경에서 음성인식이 잘 되었고, 잘 안되었다고 의견을 주시는 것이<br />
       저희에게는 큰 도움이 됩니다.
       <br /><br />
-      풀다는 축어록을
-      더욱 빠르고 편리하게 작성하기 위해 여러 기능들을 고려하고 있습니다.
+      풀다는 심리 상담사들의
+      수련 여건을 개선하기 위해 여러 기능들을 고려하고 있습니다.
       <br />
       테스터분들의 이용후기와 의견을 기다립니다.
       <br /><br />
