--- a/initNotice.html
+++ b/initNotice.html
@@ -7,32 +7,38 @@
   <div>
     <p style="font-size: 0.95rem; margin: 0px;">
       안녕하세요! 풀다팀 입니다. <br />
-      많은 분들이 베타테스트에 참여하시면서 의견을 보내주십니다.
+      많은 선생님들께서 사용 의견을 보내주셨습니다.
       <br />
-      저희 팀은 보내주신 의견들을 검토하고 개발하면서 시간을
-      보내고 있답니다. 👩‍💻🧑‍💻
+      저희팀은 보내주신 의견들을 검토하고 풀다를 업데이트하며 시간을 보내고 있습니다. 👩‍💻🧑‍💻
       <br /><br />
-      많은 분들이 음성인식 결과가 정확하지 않아 아쉬워하십니다.
+      보내주시는 의견 중 가장 많이 말씀해 주시는 부분은 음성인식 결과에 관한 부분이었습니다.
       <br />
-      저희도 좋은 결과를 제공해드리고 싶지만 <br />
-      <span style="font-size: 1.1rem;">음성인식</span>은 축어록을 완벽히 풀어주지 못합니다.🥺 <br />
-      <span style="font-size: 1.1rem;">음성인식</span>은 녹음 음질에 따라 매우 크게
-      영향을 받기 때문입니다.<br /><br />
-      그럼에도 불구하고 조금이라도 도움이 될수 있게 <br />
-      현재는 녹음 세팅 환경을 알려드리고 있습니다.<br />
-      제공해드리는 초안이 축어록 작성에 조금이라도 도움이
-      되었으면 좋겠습니다.
+      음성인식이 잘 되어서 편하다고 이야기 해주시는 분들도 계셨고, 기대하신 만큼 결과가 좋지 않아 아쉬워하시는 분들도 계셨습니다.
       <br /><br />
-      내부적으로는 다양한 상담환경에서도 좋은 성능을 보일 수
-      있도록 고민 중이기 때문에,<br />
-      어떤 환경에서 음성인식이 잘 되었고, 잘 안되었다고 의견을 주시는 것이<br />
-      저희에게는 큰 도움이 됩니다.
+      항상 좋은 음성인식 결과를 제공해드리고 싶지만,<br />
+      현재의 <span style="font-size: 1.1rem;">음성인식</span>기술은 언제나 완벽하게 축어록을 풀어줄 수 없는 상황입니다.🥺 <br />
+      <span style="font-size: 1.1rem;">음성인식</span>이 녹음 음질에 따라서 매우 크게 영향을 받기 때문입니다.
       <br /><br />
-      풀다는 심리 상담사들의
-      수련 여건을 개선하기 위해 여러 기능들을 고려하고 있습니다.
+      그래서 조금이라도 인식률이 높은 음성파일을 만들 수 있도록
       <br />
-      테스터분들의 이용후기와 의견을 기다립니다.
+      녹음 세팅 환경에 대한 체크리스트를 제공해드리고 있습니다.
+      <br />
+      체크리스트를 참조하셔서 조금이나마 인식률이 높은 초안을 이용하시면 좋겠습니다. 
       <br /><br />
+      내부적으로는 다양한 상담환경에서 좋은 성능을 보일 수 있는 방법에 대해서 계속 고민하고 있습니다.
+      <br />
+      선생님들께서 어떤 환경에서 인식이 잘 되고, 어떤 환경에서는 인식이 잘 안되는지를 알려주신다면
+      <br />
+      더 좋은 초안을 제공하는데 큰 도움이 될것입니다.
+      <br /><br />
+      풀다팀은 궁극적으로 선생님들의 수련 여건이 편해지는 것을 목표로 하고 있으며
+      <br />
+      음성인식 기능은 풀다가 제공할 기능들 중에 하나라는 점을 알려드립니다.
+      <br />
+      선생님들께서 보내주시는 의견을 소중하게 듣고, 더 좋은 프로그램을 개발하기 위해 노력하겠습니다.
+      <br />
+      선생님들의 귀한 의견을 기다리겠습니다. 감사합니다.
+      <br />
       <span>2020.08.06 풀다팀 드림</span>
     </p>
   </div>
