--- a/initNotice.html
+++ b/initNotice.html
@@ -16,7 +16,7 @@
       음성인식이 잘 되어서 편하다고 이야기 해주시는 분들도 계셨고, 기대하신 만큼 결과가 좋지 않아 아쉬워하시는 분들도 계셨습니다.
       <br /><br />
       항상 좋은 음성인식 결과를 제공해드리고 싶지만,<br />
-      현재의 <span style="font-size: 1.1rem;">음성인식</span>기술은 언제나 완벽하게 축어록을 풀어줄 수 없는 상황입니다.🥺 <br />
+      <span style="font-size: 1.1rem;">현재의 음성인식</span> 기술은 언제나 완벽하게 축어록을 풀어줄 수 없는 상황입니다.🥺 <br />
       <span style="font-size: 1.1rem;">음성인식</span>이 녹음 음질에 따라서 매우 크게 영향을 받기 때문입니다.
       <br /><br />
       그래서 조금이라도 인식률이 높은 음성파일을 만들 수 있도록
@@ -36,9 +36,9 @@
       음성인식 기능은 풀다가 제공할 기능들 중에 하나라는 점을 알려드립니다.
       <br />
       선생님들께서 보내주시는 의견을 소중하게 듣고, 더 좋은 프로그램을 개발하기 위해 노력하겠습니다.
-      <br />
+      <br /><br />
       선생님들의 귀한 의견을 기다리겠습니다. 감사합니다.
-      <br />
+      <br /><br />
       <span>2020.08.06 풀다팀 드림</span>
     </p>
   </div>
