--- a/initNotice.html
+++ b/initNotice.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <div>
-    <p style="font-size: 0.95rem; margin: 0px;">
+    <p style="font-size: 0.95rem; margin: 0px; font-size:1.5rem">
       안녕하세요! 풀다팀 입니다. <br />
       많은 선생님들께서 사용 의견을 보내주셨습니다.
       <br />
